<resources>
    <string name="app_name">Bet With Friends</string>
    <string name="app_title">Bet With Friends</string>
    <string name="app_owner">viplove.android.com</string>

    <!-- Strings related to Drawer -->
    <string name="activity_name_home">Home</string>
    <string name="activity_name_create_bet">New Bet</string>
    <string name="activity_name_my_bets">My Bets</string>
    <string name="activity_name_new_stake">New Stake</string>
    <string name="activity_name_my_stakes">My Stakes</string>

    <!-- Strings related to Settings -->
    <string name="action_edit_profile">Edit Profile</string>
    <string name="action_change_odds_format">Change Odds Format</string>
    <string name="action_logout">Logout</string>

    <!-- Strings related to Activity Name -->
    <string name="title_activity_home">Bet With Friends</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_create_bet">New Bet</string>
    <string name="title_activity_my_bets">My Bets</string>
    <string name="title_activity_create_stake">New Stake</string>
    <string name="title_activity_my_stakes">My Stakes</string>
    <string name="title_activity_edit_profile">Edit Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">Email</string>
    <string name="action_sign_in_facebook">Facebook</string>
    <string name="action_sign_in_google">Google</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to Settings -->
</resources>
