<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/activity_name_home" />
        <item
            android:id="@+id/nav_new_bet"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/activity_name_create_bet" />
        <item
            android:id="@+id/nav_my_bets"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/activity_name_my_bets" />
        <item
            android:id="@+id/nav_new_stake"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/activity_name_new_stake" />
        <item
            android:id="@+id/nav_my_stakes"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/activity_name_my_stakes" />
    </group>

    <item android:title="Distribute">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@android:drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@android:drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>